# agent-api-cookiecutter

./: README.md  cookiecutter.json  main.py  pyproject.toml
.github/workflows/: ISSUE_TEMPLATE.md  build-pipeline.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: Dockerfile  docker-compose.yaml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/infrastructure/api/: main.py  models.py
{{cookiecutter.pypi_package_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: config.py
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/infrastructure/api/: main.py  models.py
